haproxy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: prod-sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:2.9
        volumeMounts:
        - name: config
          mountPath: /usr/local/etc/haproxy/haproxy.cfg
          subPath: haproxy.cfg
        ports:
        - containerPort: 80
        securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true

      volumes:
      - name: config
        configMap:
          name: haproxy-config
